--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Nine Men's Morris</h1>
-    <div id="room-selection">
-        <input type="text" id="room-id" placeholder="Enter Room ID">
-        <button id="create-room">Create Room</button>
-        <button id="join-room">Join Room</button>
-    </div>
-    <div id="game-container" class="hidden">
-        <div id="game-info">
-            <p>Room ID: <span id="display-room-id"></span></p>
-            <p>Your are Player: <span id="player-id"></span></p>
-            <p>Turn: <span id="turn"></span></p>
-            <p>Phase: <span id="phase"></span></p>
-            <p>Pieces to place: <span id="pieces-to-place"></span></p>
+    <div id="notification-container"></div>
+    <main>
+        <h1>Nine Men's Morris</h1>
+        <div id="room-selection">
+            <input type="text" id="player-name" placeholder="Enter Your Name">
+            <button id="play-button">Play Game</button>
         </div>
-        <div id="board"></div>
-    </div>
+        <div id="game-container" class="hidden">
+            <div id="board-container">
+                <div id="waiting-message" class="hidden">
+                    <h2>Waiting for opponent...</h2>
+                </div>
+                <div id="board"></div>
+            </div>
+            <div id="sidebar">
+                <h2>Game Info</h2>
+                <div id="player-names"></div>
+                <div><span class="info-label">You are:</span> <span class="badge" id="player-badge"></span></div>
+                <div><span class="info-label">Turn:</span> <span class="badge badge-turn" id="turn"></span></div>
+                <div><span class="info-label">Phase:</span> <span class="badge badge-phase" id="phase"></span></div>
+                <div><span class="info-label">Pieces to place:</span> <span class="info-value" id="pieces-to-place"></span></div>
+            </div>
+        </div>
+    </main>
+    <audio id="move-sound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_115b9bfae2.mp3"></audio>
+    <audio id="remove-sound" src="https://cdn.pixabay.com/audio/2022/03/10/audio_c848a63266.mp3"></audio>
+    <audio id="mill-sound" src="make_mill.mp3"></audio>
+    <audio id="turn-switch-sound" src="turn_change.mp3"></audio>
     <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
 </body>
